# jaturi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: main.rs
