[package]
name = "jaturi"
version = "0.1.8"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
rand = "0.9"
dirs = "6.0"
